--- a/DotnetYuzuncuYilProjesi.Core/DotnetYuzuncuYilProjesi.Core.csproj
+++ b/DotnetYuzuncuYilProjesi.Core/DotnetYuzuncuYilProjesi.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="UnitOfWorks\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
